Restructured StandardPage to allow for future features/changed openfld & run to image

--- a/DataManager/DataManager.csproj
+++ b/DataManager/DataManager.csproj
@@ -274,5 +274,11 @@
   <ItemGroup>
     <Resource Include="Resources\AddDictionary.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\FindinFiles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\run.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
