--- a/Test_Data_Operations/Test_Data_Operations.csproj
+++ b/Test_Data_Operations/Test_Data_Operations.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="test_resources\test1.xlsx" />
+    <None Include="test_resources\test2.xlsx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataManager\DataManager.csproj">
@@ -55,8 +57,6 @@
       <Name>DataManager</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="test_resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
