Wire up GUI to DMLibrary
Progress moved from ProgressBar to new window to keep list of steps. Input validation added to viewmodel method to verify at process start.  Changes made to DMLibrary to support basic progress reports and cancellation.

--- a/DMCoreGUI/DMCoreGUI.csproj
+++ b/DMCoreGUI/DMCoreGUI.csproj
@@ -43,4 +43,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DMCoreLibrary\DMCoreLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
