--- a/DMCoreLibrary/DMCoreLibrary.csproj
+++ b/DMCoreLibrary/DMCoreLibrary.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="4.5.3.3" />
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.7.1" />
   </ItemGroup>
 
 </Project>
