Added modal for selecting sheets
Barebones functinality included to select sheets.  Additional room for more viewing additional details.  Added additional test files.

--- a/DMCoreGUI/DMCoreGUI.csproj
+++ b/DMCoreGUI/DMCoreGUI.csproj
@@ -47,4 +47,10 @@
     <ProjectReference Include="..\DMCoreLibrary\DMCoreLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="resources\loading.gif">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
