--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,14 @@
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
+[Pp]ublish/
 x64/
 x86/
 bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
-DataManager/publish/
 *.user
 */packages.config
 FeatureTesting/
-Test_Data_Operations/
 /DMCoreGUI/Properties/PublishProfiles
